fix: badge color in dark mode

--- a/src/components/Badge/index.module.less
+++ b/src/components/Badge/index.module.less
@@ -6,7 +6,7 @@
   height: 22px;
   font-size: 14px;
   box-sizing: border-box;
-  background-color: var(--background, #ffffff);
+  background-color: var(--badge-color, #ffffff);
   color: var(--text-secondary, #8c92ab);
   border-radius: 22px;
   &.success {
