--- a/src/theme.module.less
+++ b/src/theme.module.less
@@ -45,6 +45,7 @@ html {
   --well-bg: #fff;
   --add-button-bg: #f0f2f6;
   --step-text: #737992;
+  --badge-color: #ffffff;
   --section-title: #1e202c;
   --image-placeholder-bg: #f0f2f6;
   --wallet-bg: #f0f2f6;
@@ -90,6 +91,7 @@ html {
 
     --dialog-shadow: 0px 10px 30px 3px rgba(155, 155, 155, 0.15);
     --well-bg: #1e202c;
+    --badge-color: #737992;
     --add-button-bg: #313545;
     --step-text: #737992;
     --section-title: #f0f2f6;
